cambios de git commit -a

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,3 +3,13 @@ body
     text-align: center;
     font-family: "Arial";
 }
+
+
+h1{
+    color: blueviolet;
+}
+
+.directorio{
+    border: 3px, black;
+    
+}
