--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,12 +4,17 @@ body
     font-family: "Arial";
 }
 
-
-h1{
-    color: blueviolet;
+#cabecera{
+    color: aliceblue;
+    background-color: black;
 }
+
 
 .directorio{
     border: 3px, black;
     
+}
+
+.directorio h1{
+    color: blueviolet;
 }
